# receipt-splitter-bot

./: .env.template  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  setup.py  template.env
docker-compose/: monitoring.yaml  storages.yaml
src/: web.py
src/api/internal/: router.py
src/api/internal/views/: probes.py
src/bot/: bot.py  middlewares.py  utils.py
src/bot/handlers/: add_friends_handlers.py  start_handler.py
src/bot/messages/: add_friend.py  base.py  start.py
src/core/: containers.py
src/core/configs/: __init__.py  database.py  general.py  logging.py  telegram.py
src/domain/entities/: pub_receipt.py  user.py
src/domain/services/: healthcheck.py  pub_receipt.py  user.py
src/domain/use_cases/: base.py  pub_receipt.py  user.py
src/gateways/postgresql/: database.py
src/gateways/postgresql/alembic/: env.py
src/gateways/postgresql/alembic/versions/: 2024_09_19_1827-1e2a8f2ed892_.py  2024_10_21_2106-41fce43283b1_.py  2024_10_29_2046-a5b6eb071b0b_.py
src/gateways/postgresql/models/: __init__.py  base.py  mixins.py  pub_receipt.py  user.py
src/gateways/postgresql/repositories/: user.py
src/project/: containers.py
src/project/configs/: logging.py  telegram.py
src/services/: healthcheck.py  user.py
src/utils/: aio.py
tests/: conftest.py
tests/fixtures/: database.py
tests/use_cases/: test_add_friend.py
