[tool.poetry]
name = "receipt-splitter-bot"
version = "0.1.0"
description = ""
authors = ["andrei_turobov <forgunn@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.5"
aiogram = "^3.7.0"
pydantic-settings = "^2.3.1"

[tool.poetry.dev-dependencies]
ipython = "^8.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
