[tool.poetry]
name = "receipt-splitter-bot"
version = "0.1.0"
description = ""
authors = ["andrei_turobov <forgunn@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.5"
aiogram = "^3.10.0"
pydantic-settings = "^2.3.4"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.31"}
punq = "^0.7.0"
asyncpg = "^0.29.0"
elastic-apm = {extras = ["opentelemetry"], version = "^6.22.3"}
alembic = "^1.13.2"

[tool.poetry.dev-dependencies]
ipython = "^8.26.0"
ipykernel = "^6.29.5"
ruff = "^0.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "W", # pycodestyle warnings
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function call
    "C901", # too complex
    "W191", # indentation contains tabs
    "W291", # trailing whitespace
]
